--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -41,7 +41,7 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           context: .
-          file: ./Dockerfile
+          file: ./python-helloworld/Dockerfile
           platforms: linux/amd64
           push: true
           tags: pixelcode2021/python-helloworld:latest
