--- a/solutions/python-helloworld/Dockerfile
+++ b/solutions/python-helloworld/Dockerfile
@@ -3,6 +3,7 @@ LABEL maintainer="Ahmed Hussein"
 
 COPY . /app
 WORKDIR /app
+RUN python -m pip install --upgrade pip
 RUN pip install -r requirements.txt
 
 # command to run on container start
